crates/uitest/fixtures/ty_check/where_const_predicate_flag_brace.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/where_const_predicate_flag_brace.fe
---
error[8-0085]: const predicate is not satisfied
   ┌─ where_const_predicate_flag_brace.fe:22:30
   │
22 │ fn off_gated() -> u256 where OFF {
   │                              ^^^ const predicate evaluated to `false` here
   │
   = const predicates must be proven by an assumption or by CTFE evaluating to `true`
